# sima

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  aabb.cc  aabb.h  align_alloc.h  arena.cc  array_deque.h  array_ptr.h  array_set.h  auto.h  bits.h  bits_util.h  broadphase.cc  broadphase.h  buffer.cc  buffer.h  callstack.cc  callstack.h  classify.cc  classify.h  collision.cc  collision2.cc  color.h  common.h  concave_polygons.txt  convex_hull.cc  convex_hull.h  csg.cc  csg.h  distance.cc  dynamic_array.h  each.h  edges.h  exception.h  file.cc  file.hh  filter.h  (+117 more)
core/: CMakeLists.txt  align_alloc.h  arena_allocator.h  array_bool.h  array_deque.h  array_set.h  arrayfire.h  auto.h  bits.h  bits_util.h  bplustree.h  callstack.cc  callstack.h  diff.cc  diff.h  dynamic_array.h  each.h  exception.h  file.cc  file.h  filter.h  format.h  hash.h  int.h  interval.h  matrix.h  model.cc  model.h  murmur3.h  net.txt  net2.txt  neural.h  optimizer.cc  optimizer.h  optional.h  property.h  range.h  small_bfs.h  span.h  sparse_matrix.h  (+34 more)
geom/: CMakeLists.txt  aabb.cc  aabb.h  broadphase.cc  broadphase.h  buffer.cc  buffer.h  classify.cc  classify.h  convex_body.cc  convex_body.h  convex_hull.cc  convex_hull.h  csg.cc  csg.h  distance.cc  distance.h  edges.h  generators.cc  generators.h  gjk.cc  gjk.h  is_valid.cc  is_valid.h  matrix.h  mesh.h  mesh_import.cc  mesh_import.h  mesh_util.h  plane.h  plucker.h  polygon.h  pose.h  primitives.cc  primitives.h  project.cc  project.h  properties.cc  properties.h  quaternion.h  (+36 more)
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/docs/: Doxyfile
glfw/src/: Makefile  cmake_install.cmake
glm/: CMakeLists.txt
glm/detail/: func_integer_simd.inl
santorini/: CMakeLists.txt  action.h  board.h  cell.h  coord.h  model.h  neural.h  old.cc  santorini.cc  tensor.h  test_santorini.cc
shaders/: checker.frag
sim/: gauss_seidel.h  integration.h  newton.h  system.cc  system.h  test_gauss_seidel.cc  test_integration.cc
sokoban/: CMakeLists.txt  cell.h  code.h  corrals.cc  corrals.h  emoji.h  frozen.h  hungarian.h  level.cc  level.h  main.cc  solver.cc  solver.h  state.h  util.cc  util.h
sokoban/levels/: 100k_moves_only  deadlocks_2x2  extra  frozen_boxes.test  holland  kids  microban1  microban5  microban5.26d  microcosmos  minicosmos  nabokosmos  original  picokosmos  sasquatch_10  sasquatch_11  sasquatch_2  sasquatch_3  sasquatch_4  sasquatch_5  sasquatch_6  sasquatch_7  sasquatch_8  sasquatch_9  simple  spiros  still_more
view/: CMakeLists.txt  color.h  font.cc  font.h  glm.h  opengl.h  rendering.cc  rendering.h  shader.cc  shader.h  vertex_buffer.h  window.cc  window.h
